--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
   "description": "A gipsi test page for a Service-worker and Progressive Web App",
   "lang": "en-GB",
   "start_url": "/",
-  "scope": "/",
+  "scope": "https://gipsi.github.io",
   "display": "standalone",
   "theme_color": "#FEE500",
   "icons": [
