--- a/manifest.json
+++ b/manifest.json
@@ -7,6 +7,7 @@
     "scope": "/",
     "display": "standalone",
     "theme_color": "#FEE500",
+    "background_color": "#339966",
     "icons": [
         {
             "src": "/icons/android-icon-192x192.png",
